# roon-waybar

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
src/: main.rs
