[package]
name = "roon-waybar"
version = "0.1.0"
edition = "2024"

[dependencies]
roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", tag = "0.3.1", features = ["settings", "status", "transport"] }
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "net", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
tokio-stream = "0.1"
